# cppnow_presentations_2014

./: .gitignore  README.md
files/: CppNow2014Ranges.odp  PracticalTypeErasureSlides.odp  bounded_integer.odp  cxx11-library-design.pptx  esitys.tar  ownership_of_memory.odp  unicode-cpp.pptx
files/esitys/: index.html
files/esitys/ui/default/: pretty.css  slides.js
files/test_driven/: ReadMe.txt
files/test_driven/Boost.Test Documentation Rewrite/: index.html
files/test_driven/snapshots/00/: CMakeLists.txt  LocalPaths.txt
files/test_driven/snapshots/01/test/: test_factors.cpp
files/test_driven/snapshots/02/test/: test_factors.cpp
files/test_driven/snapshots/04/test/: test_factors.cpp
files/test_driven/snapshots/05/: CMakeLists.txt
files/test_driven/snapshots/05/factors/: factors.cpp
files/test_driven/snapshots/06/factors/: factors.cpp
files/test_driven/snapshots/07/test/: test_factors.cpp
files/test_driven/snapshots/09/test/: test_factors.cpp
files/test_driven/snapshots/10/factors/: factors.cpp
files/test_driven/snapshots/10/test/: test_factors.cpp
files/test_driven/snapshots/11/test/: test_factors.cpp
files/test_driven/snapshots/12/test/: test_factors.cpp
files/test_driven/snapshots/14/test/: test_factors.cpp
files/test_driven/snapshots/15/factors/: factors.cpp
files/test_driven/snapshots/16/factors/: factors.cpp
files/test_driven/snapshots/16/test/: test_factors.cpp
files/test_driven/snapshots/25/: CMakeLists.txt
files/test_driven/snapshots/27/: CMakeLists.txt
files/test_driven/snapshots/39/: CMakeLists.txt
(+277 files in other folders)
